--- a/CSS/one_page_website.css
+++ b/CSS/one_page_website.css
@@ -8,7 +8,7 @@ p {
 
 
 input[type=text] {
-    width: 50%;
+    width: 25%;
     margin: 2px 0;
     border: 4px solid rgb(102, 21, 21);
     border-radius: 5px;
@@ -18,13 +18,69 @@ input[type=text] {
 }
 
 .submit input[type="submit"]:hover {
-    color: rgb(7, 7, 7);
-    background-color: #20588f;
-    box-shadow: inset 1px 2px 15px 0 rgba(3, 232, 248, 0.5);
+    color: rgb(250, 248, 248);
+    background-color: #f30c0c;
+    box-shadow: inset 1px 2px 15px 0 rgba(134, 115, 115, 0.5);
     transition-property: background;
-    transition-duration: .5s;
+    transition-duration: .6s;
     transition-delay: 0s;
     transition-timing-function: ease-in-out;
     cursor: pointer;
+    border: 2px solid black;
 
+}
+
+body {
+    margin: 0;
+}
+
+.grids {
+    display: grid;
+    grid-template-columns: repeat(3, 200px);
+    justify-content: center;
+    align-content: center;
+    grid-gap: 10px;
+    height: 100vh;
+}
+
+.grids img {
+    width: 200px;
+    height: 200px;
+    cursor: pointer;
+    border-radius: 8px;
+}
+
+img {
+    width: 900px;
+    height: 600px;
+    justify-content: center;
+    align-content: center;
+    border-radius: 8px;
+}
+
+#lightbox {
+    position: fixed;
+    z-index: 1000;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.6);
+    display: none;
+}
+
+#lightbox.active {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.facts {
+    justify-content: center;
+    align-content: center;
+    display: grid;
+    grid-template-rows: auto;
+}
+
+h4 {
+    text-align: center;
 }
